Added home screen as per the design and integrated mock API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">DinDinnTest</string>
     <string name="text_hello">Hello</string>
+    <string name="content_image">Image View</string>
+    <string name="food_short_description">Add most of the remaining sauce, reserving a bit to drizzle over the top when serving.
+        Gently toss everything together in the casserole dish until combined. Enjoy!</string>
 </resources>
